<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_movie"
    android:layout_width="wrap_content"
    android:layout_height="300dp"
    android:layout_margin="5dp"
    android:background="@drawable/roundrect">

    <ImageView
        android:id="@+id/iv_movie"
        android:layout_width="wrap_content"
        android:layout_height="245dp"
        android:contentDescription="@string/todo10"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@id/cl_movie"
        app:layout_constraintStart_toStartOf="@id/cl_movie"
        app:layout_constraintTop_toTopOf="@id/cl_movie"
        app:srcCompat="@drawable/avengers_and_games" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundrect1"
        android:text="@string/_13_1"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/iv_movie"
        app:layout_constraintTop_toTopOf="@id/iv_movie" />

    <ImageView
        android:id="@+id/iv_like"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo11"
        app:layout_constraintEnd_toEndOf="@id/iv_movie"
        app:layout_constraintTop_toTopOf="@id/iv_movie"
        app:srcCompat="@drawable/like" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/action_adventure_fantasy"
        android:textColor="@color/red"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@id/rating_Bar_movie"
        app:layout_constraintStart_toStartOf="@id/iv_movie"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tv_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/_125_reviews"
        android:textColor="@color/gray"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/rating_Bar_movie"
        app:layout_constraintStart_toEndOf="@id/rating_Bar_movie"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tv_movie_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/avengers_and_games"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/tv_min"
        app:layout_constraintStart_toStartOf="@id/cl_movie" />

    <TextView
        android:id="@+id/tv_min"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/_137_min"
        android:textColor="@color/gray"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@id/cl_movie"
        app:layout_constraintStart_toStartOf="@id/cl_movie"
        tools:ignore="SmallSp" />

    <RatingBar
        android:id="@+id/rating_Bar_movie"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:numStars="5"
        android:progressBackgroundTint="@color/light"
        android:progressTint="@color/red"
        android:rating="4"
        app:layout_constraintBottom_toTopOf="@id/tv_movie_name"
        app:layout_constraintStart_toStartOf="@id/iv_movie" />

</androidx.constraintlayout.widget.ConstraintLayout>